[package]
name = "ring-signatures"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
curve25519-dalek = { version = "4.1.3", features = ["alloc", "precomputed-tables", "rand_core", "digest"] }
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
